# dataidea-home

./: 404.html  about.html  blog.html  blog_detail.html  contact.html  course_materials.html  db.sqlite3  footer.html  header.html  index.html  login.html  privacy_policy.html  pyproject.toml  terms_of_service.html
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_blogcategory_category.py  0003_remove_blog_date_featured_remove_blog_popularity_and_more.py  0004_blog_date_alter_blog_cover_image.py  0005_author_image.py
css/: style.css
dataidea/: asgi.py  settings.py  urls.py  wsgi.py
js/: blog.js  blog_detail.js  course_materials.js  header_footer.js  index.js  login.js
school/: models.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_alter_learningmaterial_cover_image.py  0003_learningmaterial_duration_and_more.py  0004_learningmaterial_rating.py  0005_learningmaterial_cost.py  0006_course_delete_learningmaterial.py  0007_alter_course_rating.py
