[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
pillow = "^10.3.0"
markdown = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
